# django-base-site

./: .gitignore  Dockerfile  Justfile  Makefile  docker-compose.yml  fly.toml  package-lock.json  package.json  pyproject.toml  vite.config.js  webpack.config.js
apps/base/templates/: 404.html  500.html  index.html
apps/base/templates/layouts/: base.html
config/docker/: Dockerfile.node
config/settings/: _base.py
frontend/: package.json  vite.config.js
frontend/js/: main.js
src/js/: App.vue  base.js
