[tool.black]
line-length = 120
target-version = ['py37']
skip-string-normalization = false
exclude = '''
(
  /(
    | \.git
    | node_modules
  )/
)
'''

[tool.isort]
line_length = 120
multi_line_output = 5
balanced_wrapping = true
known_django = 'django'
sections = 'FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER'
skip = 'node_modules'


[tool.poetry]
name = "django-base-site"
version = "2020-02-11"
description = "The Django Base Site is a Django site that is built using the best Django practices and comes with all the common Django packages that you need to jumpstart your next project."
authors = ["Brent O'Connor"]

[tool.poetry.dependencies]
python = "~3.8.1"
"boto3" = "~1.11.4"
"psycopg2-binary" = "~2.8.4"
celery = "~4.4.0"
Django = "~3.0"
django-allauth = "~0.41.0"
django-crispy-forms = "~1.8.0"
django-redis-cache = "~2.1.0"
django-redis-sessions = "~0.6.1"
django-storages = "~1.8"
djangorestframework = "~3.11.0"
environs = {extras = ["django"], version = "~7.2.0"}
# required by redis and django-redis-cache
hiredis = "~1.0.0"
uwsgi = "~2.0.18"

[tool.poetry.dev-dependencies]
"fabric3" = "~1.14"
black = "~19.3b0"
coverage = "~5.0.3"
django-debug-toolbar = "~2.0"
django-stubs = "~1.4.0"
djangorestframework-stubs = "~1.1.0"
ipdb = "~0.12.2"
isort = "~4.3.21"
mypy = "~0.761"
sphinx = "~2.3.1"
sphinx-autobuild = "~0.7.1"
sphinx-rtd-theme = "~0.4.3"
